--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+safe: false # A hack as environment variable (https://github.com/plusjade/jekyll-bootstrap/issues/84)
 auto: true
 server: true
 permalink: none
