Added the coffeescript file and corrected the versions.

--- a/.tagconfig.json
+++ b/.tagconfig.json
@@ -11,6 +11,12 @@
       "regexs": [
         "Opentip Version ###"
       ]
+    },
+    {
+      "name": "src/opentip.coffee",
+      "regexs": [
+        "version: \"###\""
+      ]
     }
   ]
 }
