--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "keywords": [ "tooltip", "ender" ],
   "homepage": "http://www.opentip.org",
   "main": [
-    "./lib/dropzone.js"
-    "./lib/dropzone.ender.js"
+    "./lib/opentip.js"
+    "./lib/adapter.ender.js"
   ],
   "maintainers": [
     {
