Finished all adapter.ajax methods and the tests for it.
Added a playground route.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "qwery": "3.x",
     "domready": "0.x",
     "bean": "0.x",
-    "bonzo": "1.x"
+    "bonzo": "1.x",
+    "reqwest": "0.x"
   },
   "ender": "noop"
 }
