Added a contact site and updated the contribute guidelines link.

--- a/_config.yml
+++ b/_config.yml
@@ -13,3 +13,5 @@ navigation:
     url: /documentation.html
   - text: contribute
     url: /contribute.html
+  - text: contact
+    url: /contact.html
