Added correct version information to the files.

--- a/.tagconfig.json
+++ b/.tagconfig.json
@@ -9,12 +9,14 @@
     {
       "name": "src/opentip.coffee",
       "regexs": [
+        "Opentip v###",
         "Opentip\\.version = \"###\""
       ]
     },
     {
       "name": "lib/opentip.js",
       "regexs": [
+        "Opentip v###",
         "Opentip\\.version = \"###\""
       ]
     },
@@ -36,43 +38,88 @@
         "Opentip v###"
       ]
     },
+
+
     {
       "name": "downloads/opentip-jquery-excanvas.js",
       "regexs": [
-        "Opentip\\.version=\"###\"",
+        "Opentip\\.version = \"###\"",
         "Opentip v###"
       ]
     },
     {
       "name": "downloads/opentip-jquery.js",
       "regexs": [
-        "Opentip\\.version=\"###\"",
+        "Opentip\\.version = \"###\"",
         "Opentip v###"
       ]
     },
     {
       "name": "downloads/opentip-native-excanvas.js",
       "regexs": [
-        "Opentip\\.version=\"###\"",
+        "Opentip\\.version = \"###\"",
         "Opentip v###"
       ]
     },
     {
       "name": "downloads/opentip-native.js",
       "regexs": [
-        "Opentip\\.version=\"###\"",
+        "Opentip\\.version = \"###\"",
         "Opentip v###"
       ]
     },
     {
       "name": "downloads/opentip-prototype-excanvas.js",
       "regexs": [
-        "Opentip\\.version=\"###\"",
+        "Opentip\\.version = \"###\"",
         "Opentip v###"
       ]
     },
     {
       "name": "downloads/opentip-prototype.js",
+      "regexs": [
+        "Opentip\\.version = \"###\"",
+        "Opentip v###"
+      ]
+    },
+
+    {
+      "name": "downloads/opentip-jquery-excanvas.min.js",
+      "regexs": [
+        "Opentip\\.version=\"###\"",
+        "Opentip v###"
+      ]
+    },
+    {
+      "name": "downloads/opentip-jquery.min.js",
+      "regexs": [
+        "Opentip\\.version=\"###\"",
+        "Opentip v###"
+      ]
+    },
+    {
+      "name": "downloads/opentip-native-excanvas.min.js",
+      "regexs": [
+        "Opentip\\.version=\"###\"",
+        "Opentip v###"
+      ]
+    },
+    {
+      "name": "downloads/opentip-native.min.js",
+      "regexs": [
+        "Opentip\\.version=\"###\"",
+        "Opentip v###"
+      ]
+    },
+    {
+      "name": "downloads/opentip-prototype-excanvas.min.js",
+      "regexs": [
+        "Opentip\\.version=\"###\"",
+        "Opentip v###"
+      ]
+    },
+    {
+      "name": "downloads/opentip-prototype.min.js",
       "regexs": [
         "Opentip\\.version=\"###\"",
         "Opentip v###"
