Greatly improved the CONTRIBUTING.md and improved the Cakefile.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "coffee-script": "*",
+    "stylus": "*",
     "uglify-js2": "*",
     "request": "*",
     "nib": "*"
