--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opentip",
-  "version": "2.2.8-dev",
+  "version": "2.3.0",
   "description": "Free opensource tooltip class.",
   "keywords": [ "tooltip" ],
   "homepage": "http://www.opentip.org",
