All download files are generated with grunt now.

--- a/package.json
+++ b/package.json
@@ -52,6 +52,10 @@
     "grunt-contrib-stylus": "*",
     "grunt-contrib-watch": "*",
     "grunt-contrib-coffee": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-clean": "*",
+    "grunt-curl": "*",
     "mocha": "*",
     "expect.js": "*",
     "mocha-phantomjs": "*",
