Corrected bower.json with right version.
Updated tagconfig.

--- a/.tagconfig.json
+++ b/.tagconfig.json
@@ -27,6 +27,12 @@
       ]
     },
     {
+      "name": "bower.json",
+      "regexs": [
+        "\"version\": \"###\""
+      ]
+    },
+    {
       "name": "package.json",
       "regexs": [
         "\"version\": \"###\""
