--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 safe: false # A hack as environment variable (https://github.com/plusjade/jekyll-bootstrap/issues/84)
 permalink: none
 pygments: true
+markdown: kramdown
 
 navigation:
   - text: overview
